@@ -2,7 +2,7 @@
 Copyright (C) 2002-10 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 Copyright (C) 2004-14 Christian Franke <smartmontools-support@lists.sourceforge.net>
 
-$Id: smartd.conf.5.in 3963 2014-07-19 18:42:43Z chrfranke $
+$Id: smartd.conf.5.in 3964 2014-07-19 19:59:51Z chrfranke $
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -260,8 +260,7 @@ may optionally be followed by Directives that will apply to all
 devices that are found in the scan.  Please see below for additional
 details.
 
-[NEW EXPERIMENTAL SMARTD FEATURE] If an entry in the configuration file
-starts with
+If an entry in the configuration file starts with
 .B DEFAULT
 instead of a device name, then all directives in this entry are set
 as defaults for the next device entries.
@@ -1580,13 +1579,15 @@ then powers down the machine.
 #! /bin/sh
 
 # Warn all users of a problem
-wall \'Problem detected with disk: \' "$SMARTD_DEVICESTRING"
-wall \'Warning message from smartd is: \' "$SMARTD_MESSAGE"
-wall \'Shutting down machine in 30 seconds... \'
- 
+wall <<EOF
+Problem detected with disk: $SMARTD_DEVICESTRING
+Warning message from smartd is: $SMARTD_MESSAGE
+Shutting down machine in 30 seconds...
+EOF
+
 # Wait half a minute
 sleep 30
- 
+
 # Power down the machine
 /sbin/shutdown -hf now
 \fP
@@ -1617,4 +1618,4 @@ full path of this file.
 \fBmail\fP(1), \fBregex\fP(7).
 
 .SH SVN ID OF THIS PAGE
-$Id: smartd.conf.5.in 3963 2014-07-19 18:42:43Z chrfranke $
+$Id: smartd.conf.5.in 3964 2014-07-19 19:59:51Z chrfranke $
