@@ -1,4 +1,4 @@
-$Id: ChangeLog 3963 2014-07-19 18:42:43Z chrfranke $
+$Id: ChangeLog 3964 2014-07-19 19:59:51Z chrfranke $
 
 2014-07-19  Christian Franke  <franke@computer.org>
 
@@ -6,6 +6,7 @@ $Id: ChangeLog 3963 2014-07-19 18:42:43Z chrfranke $
 	Add FILES section.  Move FULL PATH info to FILES section.
 	Rename REFERENCES section.  Move HOME PAGE info to REFERENCES section.
 	Remove AUTHORS section from smartd.conf man page.
+	Update or remove various outdated info.
 
 2014-07-18  Christian Franke  <franke@computer.org>
 
